--- a/Fuckin Bootstrap/contact.html
+++ b/Fuckin Bootstrap/contact.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blake Fuckin Summers</title>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -10,21 +11,6 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">About Me <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Contact</a>
-        <a class="nav-item nav-link" href="#">Portfolio</a>
-      </div>
-    </div>
-  </nav>
-
   <header id="masthead">
     <div class="container">
       <a href="index.html" id="logo">Blake Summers</a>
@@ -44,11 +30,11 @@
         <ul>
           <li>
             <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+            <input type="text" id="name" name="name" placeholder="Deuce Bigalow" required="required">
           </li>
           <li>
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+            <input type="email" id="email" name="email" placeholder="thisissofrustrating@gmail.com" required="required">
           </li>
           <li>
             <label for="message">Message</label>
